# aatomate

./: .gitignore  generate-icons.js  next.config.ts  package-lock.json  package.json  schemas.sql  seed-cases.mjs  seed_case_studies.sql  seed_services.sql  supabase_rls_policies.sql  supabase_schema_update.sql  supabase_whatsapp_rpc.sql  supabase_whatsapp_tables.sql  test_insert.js  update.sql  vercel.json
backend/: .gitignore  ai_agent.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/app/api/v1/endpoints/: whatsapp.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/services/: lead_service.py  state_machine.py  webhook_sync.py  whatsapp_service.py
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/actions/: contact.ts  leads.ts  payment.ts  whatsapp.ts
src/app/admin/: client.tsx  layout.tsx  page.tsx
src/app/blog/: page.tsx
src/app/case-studies/: page.tsx
src/app/contact/: page.tsx
src/app/privacy/: page.tsx
src/app/products/: page.tsx
src/app/refund/: page.tsx
src/app/terms/: page.tsx
src/components/: Chatbot.tsx  ContactSection.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  IndustriesServed.tsx  Navbar.tsx  Preloader.tsx  Pricing.tsx  Problems.tsx  Process.tsx  Products.tsx  Results.tsx  Services.tsx  Solutions.tsx  Statistics.tsx  Testimonials.tsx  TrustSection.tsx  WhatsAppWidget.tsx  WhyChooseUs.tsx
src/components/admin/: DataTable.tsx  KPICard.tsx  Sidebar.tsx  ThemeToggle.tsx  (+1 more)
src/data/: blog.ts  caseStudies.tsx  industries.ts  products.ts
src/lib/: firebase-admin.ts
(+64 files in other folders)
