[project]
name = "backend"
version = "0.1.0"
description = "Backend for Aatomate"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "firebase-admin==6.5.0",
    "pydantic==2.7.4",
    "openai==1.34.0",
    "python-dotenv==1.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ai_agent", "database", "main", "models"]
