[project]
name = "aatomate-backend"
version = "0.1.0"
description = "Aatomate AI WhatsApp CRM Backend"
authors = [
    {name = "Aatomate", email = "info@aatomate.com"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.0",
    "supabase>=2.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
